[gd_scene load_steps=33 format=2]

[ext_resource path="res://ui/fonts/3D Drawn.TTF" type="DynamicFontData" id=1]
[ext_resource path="res://ui/fonts/Arial.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://windows/password_wall.gd" type="Script" id=3]
[ext_resource path="res://Windows/cbar.gd" type="Script" id=4]
[ext_resource path="res://ui/icons/buttons/encyclopedia.png" type="Texture" id=5]
[ext_resource path="res://ui/icons/buttons/typing.png" type="Texture" id=6]
[ext_resource path="res://ui/icons/buttons/khan_academy.png" type="Texture" id=7]
[ext_resource path="res://ui/icons/buttons/browser.png" type="Texture" id=8]
[ext_resource path="res://ui/icons/buttons/national_geographic.png" type="Texture" id=9]
[ext_resource path="res://ui/icons/buttons/fun_brain.png" type="Texture" id=10]
[ext_resource path="res://ui/icons/display/settings.png" type="Texture" id=11]
[ext_resource path="res://ui/icons/display/google.png" type="Texture" id=12]
[ext_resource path="res://ui/icons/application_icon.png" type="Texture" id=13]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[sub_resource type="Animation" id=2]
resource_name = "acja_website_viewer"
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:rect_position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 416, -0.25, 0, 0.848513, -2.12207, 16, -0.739972, 0.741913, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}

[sub_resource type="Animation" id=3]
resource_name = "link_icon"
length = 0.4
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:rect_position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 456, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:rect_position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( -120, -0.25, 0, 0.186063, 246, 136, -0.106593, -1, 0.25, 0 ),
"times": PoolRealArray( 0, 0.4 )
}

[sub_resource type="Animation" id=4]
resource_name = "link_icon"
length = 0.4
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:rect_position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 456, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:rect_position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( -120, -0.25, 0, 0.186063, 246, 136, -0.106593, -1, 0.25, 0 ),
"times": PoolRealArray( 0, 0.4 )
}

[sub_resource type="Animation" id=5]
resource_name = "link_icon"
length = 0.4
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:rect_position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 464, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:rect_position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( -120, -0.25, 0, 0.25, 0, 144, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.4 )
}

[sub_resource type="Animation" id=6]
resource_name = "link_icon"
length = 0.4
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:rect_position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 464, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:rect_position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( -120, -0.25, 0, 0.25, 0, 144, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.4 )
}

[sub_resource type="Animation" id=7]
resource_name = "link_icon"
length = 0.4
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:rect_position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 464, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:rect_position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( -120, -0.25, 0, 0.25, 0, 144, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.4 )
}

[sub_resource type="Animation" id=8]
resource_name = "link_icon"
length = 0.4
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:rect_position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 464, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:rect_position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( -120, -0.25, 0, 0.25, 0, 144, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.4 )
}

[sub_resource type="Animation" id=9]
resource_name = "link_icon"
length = 0.4
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:rect_position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 464, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:rect_position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( -120, -0.25, 0, 0.25, 0, 144, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.4 )
}

[sub_resource type="Animation" id=10]
resource_name = "link_icon"
length = 0.4
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:rect_position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 464, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:rect_position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( -120, -0.25, 0, 0.25, 0, 144, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.4 )
}

[sub_resource type="Animation" id=19]
resource_name = "link_icon"
length = 0.4
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:rect_position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 464, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:rect_position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( -120, -0.25, 0, 0.25, 0, 144, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.4 )
}

[sub_resource type="DynamicFont" id=11]
size = 18
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=12]
length = 0.4
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:rect_position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( -256, -0.25, 0, 0.25, 0, 384, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.4 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:rect_position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 248, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[sub_resource type="DynamicFont" id=13]
size = 30
outline_size = 1
outline_color = Color( 1, 0.105882, 0.337255, 1 )
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=14]
length = 3.22
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:rect_position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( -264, -0.25, 0, 0, 242.21, 384, -0.821141, -2.25546, 0.25, 0, 384, -0.25, 0, 0.848513, -2.25546, 1264.61, -0.208285, -579.547, 0.644277, 196.948 ),
"times": PoolRealArray( 0, 0.834827, 2.03917, 3.3 )
}

[sub_resource type="DynamicFont" id=15]
size = 25
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=16]
size = 15
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=17]
size = 11
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=18]
use_filter = true
font_data = ExtResource( 2 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="backround" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 0.997
margin_bottom = 1.79999
color = Color( 0.137255, 0.137255, 0.137255, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="acja_website_viewer" type="Label" parent="."]
anchor_right = 25.6
anchor_bottom = 15.0
margin_left = 416.0
margin_top = 16.0
margin_right = -25613.4
margin_bottom = -8966.0
custom_fonts/font = SubResource( 1 )
text = "ACJA WEBSITE VEIWER"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="acja_website_viewer"]
anims/acja_website_viewer = SubResource( 2 )

[node name="settings" type="TextureRect" parent="."]
margin_left = 8.0
margin_top = -120.0
margin_right = 120.0
margin_bottom = -8.0
texture = ExtResource( 11 )
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="settings"]
playback_speed = 0.5
anims/link_icon = SubResource( 3 )

[node name="google" type="TextureRect" parent="."]
margin_left = 136.0
margin_top = -120.0
margin_right = 248.0
margin_bottom = -7.99999
texture = ExtResource( 12 )
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="google"]
playback_speed = 0.5
anims/link_icon = SubResource( 4 )

[node name="browser" type="TextureRect" parent="."]
margin_left = 272.0
margin_top = -112.0
margin_right = 368.0
margin_bottom = -16.0
texture = ExtResource( 8 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="browser"]
playback_speed = 0.5
anims/link_icon = SubResource( 5 )

[node name="encyclopedia" type="TextureRect" parent="."]
margin_left = 400.0
margin_top = -112.0
margin_right = 496.0
margin_bottom = -16.0
texture = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="encyclopedia"]
playback_speed = 0.5
anims/link_icon = SubResource( 6 )

[node name="khan_academy" type="TextureRect" parent="."]
margin_left = 528.0
margin_top = -112.0
margin_right = 624.0
margin_bottom = -16.0
texture = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="khan_academy"]
playback_speed = 0.5
anims/link_icon = SubResource( 7 )

[node name="typing" type="TextureRect" parent="."]
margin_left = 656.0
margin_top = -112.0
margin_right = 752.0
margin_bottom = -16.0
texture = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="typing"]
playback_speed = 0.5
anims/link_icon = SubResource( 8 )

[node name="national_geographic" type="TextureRect" parent="."]
margin_left = 784.0
margin_top = -112.0
margin_right = 880.0
margin_bottom = -16.0
texture = ExtResource( 9 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="national_geographic"]
playback_speed = 0.5
anims/link_icon = SubResource( 9 )

[node name="fun_brain" type="TextureRect" parent="."]
margin_left = 912.0
margin_top = -112.0
margin_right = 1008.0
margin_bottom = -16.0
texture = ExtResource( 10 )
expand = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="fun_brain"]
playback_speed = 0.5
anims/link_icon = SubResource( 10 )

[node name="logo" type="TextureRect" parent="."]
margin_left = 464.0
margin_top = -240.0
margin_right = 560.0
margin_bottom = -144.0
texture = ExtResource( 13 )
expand = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="logo"]
playback_speed = 0.5
anims/link_icon = SubResource( 19 )

[node name="link_title" type="Label" parent="."]
margin_left = -256.0
margin_top = 248.0
margin_right = 0.000183105
margin_bottom = 269.0
custom_colors/font_color = Color( 0.803922, 0.803922, 0.803922, 1 )
custom_fonts/font = SubResource( 11 )
align = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="link_title"]
playback_speed = 0.5
anims/link_title = SubResource( 12 )

[node name="password_incorrect" type="Label" parent="."]
margin_left = -264.0
margin_top = 472.0
margin_right = -5.99979
margin_bottom = 507.0
rect_rotation = 360.0
rect_pivot_offset = Vector2( 68, 8 )
custom_fonts/font = SubResource( 13 )
text = "Password Incorrect"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="password_incorrect"]
playback_speed = 2.0
anims/password_incorrect = SubResource( 14 )

[node name="password" type="LineEdit" parent="."]
margin_left = 384.0
margin_top = 328.0
margin_right = 640.0
margin_bottom = 367.0
custom_fonts/font = SubResource( 15 )
max_length = 12
secret = true
secret_character = "O"
context_menu_enabled = false
clear_button_enabled = true
shortcut_keys_enabled = false
selecting_enabled = false
placeholder_text = "Password"
placeholder_alpha = 0.2
caret_blink = true
caret_blink_speed = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="cancel" type="Button" parent="."]
margin_left = 384.0
margin_top = 376.0
margin_right = 442.0
margin_bottom = 400.0
focus_mode = 0
mouse_default_cursor_shape = 2
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0, 0.835294, 1, 1 )
custom_fonts/font = SubResource( 16 )
text = "Cancel"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="recover_password" type="Button" parent="."]
margin_left = 8.0
margin_top = 573.0
margin_right = 114.0
margin_bottom = 592.0
focus_mode = 0
mouse_default_cursor_shape = 2
custom_colors/font_color = Color( 1, 1, 1, 0.501961 )
custom_colors/font_color_hover = Color( 0, 0.835294, 1, 1 )
custom_fonts/font = SubResource( 17 )
text = "Recover Password"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="continue" type="Button" parent="."]
margin_left = 568.0
margin_top = 376.0
margin_right = 638.0
margin_bottom = 400.0
focus_mode = 0
mouse_default_cursor_shape = 2
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0, 0.835294, 1, 1 )
custom_fonts/font = SubResource( 16 )
text = "Continue"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="cbar" type="Control" parent="."]
margin_right = 1024.0
margin_bottom = 32.0
script = ExtResource( 4 )

[node name="exit" type="Button" parent="cbar"]
margin_left = 998.499
margin_top = 2.58379
margin_right = 1021.5
margin_bottom = 27.584
focus_mode = 0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 0, 0, 1 )
custom_fonts/font = SubResource( 18 )
text = "X"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="cancel" to="." method="_on_cancel_pressed"]
[connection signal="pressed" from="recover_password" to="." method="_on_recover_password_pressed"]
[connection signal="pressed" from="continue" to="." method="_on_continue_pressed"]
[connection signal="gui_input" from="cbar" to="cbar" method="_on_cbar_gui_input"]
[connection signal="pressed" from="cbar/exit" to="cbar" method="_on_exit_pressed"]
